kube-deploy/version1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: version1-service
spec:
  selector:
    app: api-version1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
