kube-deploy/version2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: version2-service
spec:
  selector:
    app: api-version2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
