kube-deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.org/rewrites: "serviceName=version1-service rewrite=/api/;serviceName=version2-service rewrite=/api/"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/
        backend:
          serviceName: version1-service
          servicePort: 80
      - path: /api/v2/
        backend:
          serviceName: version2-service
          servicePort: 80
